--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,32 +5,12 @@
     box-sizing: border-box;
 }
 
-.main-poster{
-    display: flex;
-    justify-content: center; /* Center horizontally */
-    align-items: center; /* Center vertically */
-    height: 100vh; /* Optional: full viewport height */
-}
-
-.main-poster img {
-    display: block; /* Ensures no margin/padding around the image */
-    width: 100vw; /* Sets the width to 100% of the viewport width */
-    height: auto; /* Maintain aspect ratio */
-    max-width: 100%; /* Ensures the image does not exceed the width of its container */
-    max-height: 100%;
-}
-
 header {
-    position: fixed; /* Fixes the header's position relative to the viewport */
-    top: 0; /* Aligns the header at the top of the viewport */
-    width: 100%; /* Ensures the header extends full width of the viewport */
-    background: rgba(0, 0, 0, 0.5); /* Semi-transparent black background */
-    z-index: 1000; /* High z-index to keep the header above other content */
+    background-color: grey;
     padding: 10px 20px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.2); /* Optional: adds shadow for better visibility */
 }
 
 
@@ -38,14 +18,9 @@ body {
     font-family: Arial, sans-serif;
     background-color: black;
     background-size: cover;
-}
-
-header {
-    display: flex;
+    justify-content: center;
     align-items: center;
-    justify-content: space-between;
-    background: rgba(0, 0, 0, 0.2);
-    padding: 10px 20px;
+    margin: 0;
 }
 
 .logo img, .footer-logo img {
@@ -55,14 +30,14 @@ header {
 nav ul {
     list-style-type: none;
     display: flex;
-    gap: 35px;
+    gap: 75px;
 }
 
 nav ul li a, .footer-links a {
     color: white;
     text-decoration: none;
     font-weight: bold;
-    font-size: 28px;
+    font-size: 24px;
 }
 
 .search-bar {
@@ -81,7 +56,7 @@ nav ul li a, .footer-links a {
     color: white;
     border: none;
     cursor: pointer;
-    font-size: 16px;
+    font-size: 14px;
 }
 
 .search-bar button:hover {
@@ -93,9 +68,93 @@ footer {
     justify-content: space-between;
     padding: 10px 20px;
     z-index: 1000;
+    background-color: grey;
 }
 
 .footer-links {
     display: flex;
-    gap: 20px;
+    margin: 10px;
+    gap: 40px;
+}
+
+
+/* Start of Carousel */
+.carousel {
+    position: relative;
+    margin: auto;
+    width: 80%;
+    overflow: hidden;
+    height: 70vh; 
+}
+.carousel-container {
+    display: flex;
+    transition: transform 0.5s ease;
+}
+.card {
+    min-width: 20%;
+    margin: 100px 10px;
+    transition: transform 0.5s ease;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.card.enlarged {
+    transform: scale(1.5);
+}
+.card img {
+    width: auto;
+    height: 35vh; /* Adjust based on your design */
+    object-fit: cover; /* Ensures the image covers the area without distortion */
+}
+.dots {
+    position: absolute;
+    bottom: 10px; /* Position from the bottom */
+    left: 50%; /* Position horizontally at 50% of the carousel's width */
+    transform: translateX(-50%); 
+    display: flex; 
+    align-items: center; 
+    justify-content: center; 
+}
+.dot {
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    background: white;
+    border-radius: 50%;
+    margin: 0 5px;
+    cursor: pointer;
+}
+.dot.active {
+    background: #333;
+}
+
+/* End of Carousel */
+
+/* Movie Detail Page */
+
+.container {
+    display: flex;
+    flex-direction: row;
+    width: 80%;
+    margin: 50px;
+    color: white;
+}
+
+.poster {
+    flex: 1;
+    margin-right: 20px;
+}
+.details {
+    flex: 2;
+}
+
+.details p{
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+img {
+    width: 400px;
+    height: auto;
 }
