--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,7 +6,7 @@
 }
 
 header {
-    background-color: grey;
+    background-color: rgb(222, 210, 150);
     padding: 10px 20px;
     display: flex;
     align-items: center;
@@ -16,28 +16,40 @@ header {
 
 body {
     font-family: Arial, sans-serif;
-    background-color: black;
+    background-color: rgb(145, 123, 0);
     background-size: cover;
     justify-content: center;
     align-items: center;
     margin: 0;
 }
 
-.logo img, .footer-logo img {
-    width: auto; 
+
+.logo img {
+    width: 200px; 
+}
+
+.footer-logo img{
+    width: 50px;
 }
 
 nav ul {
     list-style-type: none;
     display: flex;
-    gap: 75px;
+    gap: 50px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
+nav ul li{
+    margin-left: 10px;
+    margin-right: 10px;
+}
 nav ul li a, .footer-links a {
-    color: white;
+    font-family: 'Allura', cursive;
     text-decoration: none;
     font-weight: bold;
-    font-size: 24px;
+    font-size: 36px;
+    color: black;
 }
 
 .search-bar {
@@ -47,12 +59,14 @@ nav ul li a, .footer-links a {
 
 .search-bar input[type="text"] {
     padding: 5px;
+    border-radius: 5px;
+    border: #ccc;
     font-size: 16px;
 }
 
 .search-bar button {
     padding: 5px 10px;
-    background-color: #007BFF;
+    background-color: gold;
     color: white;
     border: none;
     cursor: pointer;
@@ -60,7 +74,7 @@ nav ul li a, .footer-links a {
 }
 
 .search-bar button:hover {
-    background-color: #0056b3;
+    background-color: gold;
 }
 
 footer {
@@ -68,13 +82,13 @@ footer {
     justify-content: space-between;
     padding: 10px 20px;
     z-index: 1000;
-    background-color: grey;
+    background-color: rgb(222, 210, 150);
 }
 
 .footer-links {
     display: flex;
-    margin: 10px;
-    gap: 40px;
+    margin: auto;
+    gap: 75px;
 }
 
 
@@ -92,7 +106,7 @@ footer {
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 60vh;
+    height: 75vh;
     overflow: hidden;
     position: relative;
 }
@@ -164,6 +178,11 @@ footer {
     flex: 1;
     margin-right: 20px;
 }
+
+.detail-poster{
+    width: 90%;
+}
+
 .details {
     flex: 2;
 }
@@ -173,10 +192,10 @@ footer {
     margin-bottom: 10px;
 }
 
-img {
+/* img {
     width: 400px;
     height: auto;
-}
+} */
 
 .showtime-button {
     margin: 7px;
